# voice-agent

./: .gitignore  DockerFile  gemini_voice_agent.py  openai_voice_agent.py  pyproject.toml  render.yaml  requirements.txt  voice_agent.md
plugins/: edge_tts_plugin.py  kokoro_tts_wrapper.py  wisper_stt_wrapper.py
